--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "i18next": "^23.12.2",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.400.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.0",
     "react-intersection-observer": "^9.10.3",
+    "react-pageflip": "^2.0.3",
+    "react-pdf": "^9.1.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "turn.js": "https://github.com/rizalibnu/turn.js.git"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.30",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
