--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.400.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flip-page": "^1.6.4",
     "react-i18next": "^15.0.0",
     "react-intersection-observer": "^9.10.3",
     "react-pageflip": "^2.0.3",
