--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-intersection-observer": "^9.10.3",
     "react-pageflip": "^2.0.3",
     "react-pdf": "^9.1.1",
+    "react-router-dom": "^6.26.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "turn.js": "https://github.com/rizalibnu/turn.js.git"
